--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
+    "nodemailer": "^7.0.10",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
+    "@types/nodemailer": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
